修复Telegram Bot重复推送问题
- 避免减仓事件被处理两次（账户更新 + 订单更新）
- 只在订单更新事件中触发减仓回调，包含实际盈亏信息
- 解决同一个消息被推送两次的问题

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,12 @@ settings_local.py
 dist/
 build/
 *.egg-info/
+
+# 文档文件（避免重复提交）
+ARCHITECTURE_ANALYSIS.md
+FLOWCHARTS.md
+TROUBLESHOOTING_GUIDE.md
+README_DOCS.md
+
+# 监控脚本（可选，如果不想提交）
+scripts/monitor_system.sh
